syntax = "proto3";

package k1s0.system.config.v1;

option go_package = "github.com/k1s0-platform/system-proto-go/config/v1;configv1";

import "google/protobuf/timestamp.proto";
import "v1/common.proto";

// ConfigService は設定管理サービス。
service ConfigService {
  // GetConfig は指定された namespace と key の設定値を取得する。
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  // ListConfigs は namespace 内の設定値を一覧取得する。
  rpc ListConfigs(ListConfigsRequest) returns (ListConfigsResponse);
  // GetServiceConfig はサービス名に対応する設定値を一括取得する。
  rpc GetServiceConfig(GetServiceConfigRequest) returns (GetServiceConfigResponse);
  // UpdateConfig は設定値を更新する。
  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);
  // DeleteConfig は設定値を削除する。
  rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse);
  // WatchConfig は設定値の変更を監視する（ストリーミング RPC）。
  rpc WatchConfig(WatchConfigRequest) returns (stream WatchConfigResponse);
  // GetConfigSchema は設定スキーマを取得する。
  rpc GetConfigSchema(GetConfigSchemaRequest) returns (GetConfigSchemaResponse);
  // UpsertConfigSchema は設定スキーマを作成・更新する。
  rpc UpsertConfigSchema(UpsertConfigSchemaRequest) returns (UpsertConfigSchemaResponse);
}

// --- ConfigEntry ---

message ConfigEntry {
  string id = 1;
  string namespace = 2;
  string key = 3;
  bytes value = 4;
  string description = 5;
  int32 version = 6;
  string created_by = 7;
  string updated_by = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// --- GetConfig ---

message GetConfigRequest {
  string namespace = 1;
  string key = 2;
}

message GetConfigResponse {
  ConfigEntry entry = 1;
}

// --- ListConfigs ---

message ListConfigsRequest {
  string namespace = 1;
  k1s0.system.common.v1.Pagination pagination = 2;
  string search = 3;
}

message ListConfigsResponse {
  repeated ConfigEntry entries = 1;
  k1s0.system.common.v1.PaginationResult pagination = 2;
}

// --- GetServiceConfig ---

message GetServiceConfigRequest {
  string service_name = 1;
  // dev | staging | prod
  string environment = 2;
}

message GetServiceConfigResponse {
  // flattened key-value pairs
  map<string, string> configs = 1;
}

// --- UpdateConfig ---

message UpdateConfigRequest {
  string namespace = 1;
  string key = 2;
  bytes value = 3;
  int32 version = 4;
  string description = 5;
  string updated_by = 6;
}

message UpdateConfigResponse {
  ConfigEntry entry = 1;
}

// --- DeleteConfig ---

message DeleteConfigRequest {
  string namespace = 1;
  string key = 2;
  string deleted_by = 3;
}

message DeleteConfigResponse {
  bool success = 1;
}

// --- WatchConfig ---

message WatchConfigRequest {
  // 監視対象 namespace（空の場合は全件）
  repeated string namespaces = 1;
}

message WatchConfigResponse {
  string namespace = 1;
  string key = 2;
  // 変更前の値（JSON エンコード済み）
  bytes old_value = 3;
  // 変更後の値（JSON エンコード済み）
  bytes new_value = 4;
  int32 old_version = 5;
  int32 new_version = 6;
  string changed_by = 7;
  // CREATED, UPDATED, DELETED
  string change_type = 8;
  google.protobuf.Timestamp changed_at = 9;
}

// --- ConfigEditorSchema ---

// ConfigFieldType は設定フィールドの型を表す。
enum ConfigFieldType {
  CONFIG_FIELD_TYPE_UNSPECIFIED = 0;
  CONFIG_FIELD_TYPE_STRING      = 1;
  CONFIG_FIELD_TYPE_INTEGER     = 2;
  CONFIG_FIELD_TYPE_FLOAT       = 3;
  CONFIG_FIELD_TYPE_BOOLEAN     = 4;
  CONFIG_FIELD_TYPE_ENUM        = 5;
  CONFIG_FIELD_TYPE_OBJECT      = 6;
  CONFIG_FIELD_TYPE_ARRAY       = 7;
}

// ConfigFieldSchema は設定フィールドのスキーマ定義。
message ConfigFieldSchema {
  string          key           = 1;
  string          label         = 2;
  string          description   = 3;
  ConfigFieldType type          = 4;
  int64           min           = 5;
  int64           max           = 6;
  repeated string options       = 7;
  string          pattern       = 8;
  string          unit          = 9;
  bytes           default_value = 10;
}

// ConfigCategorySchema はカテゴリ単位のスキーマ定義。
message ConfigCategorySchema {
  string                     id         = 1;
  string                     label      = 2;
  string                     icon       = 3;
  repeated string            namespaces = 4;
  repeated ConfigFieldSchema fields     = 5;
}

// ConfigEditorSchema はサービスの設定エディタスキーマ全体を表す。
message ConfigEditorSchema {
  string                        service          = 1;
  string                        namespace_prefix = 2;
  repeated ConfigCategorySchema categories       = 3;
  google.protobuf.Timestamp     updated_at       = 4;
}

// --- GetConfigSchema ---

message GetConfigSchemaRequest {
  string service_name = 1;
}

message GetConfigSchemaResponse {
  ConfigEditorSchema schema = 1;
}

// --- UpsertConfigSchema ---

message UpsertConfigSchemaRequest {
  ConfigEditorSchema schema     = 1;
  string             updated_by = 2;
}

message UpsertConfigSchemaResponse {
  ConfigEditorSchema schema = 1;
}
